--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
-    "@vueuse/core": "^11.0.3",
+    "@vueuse/core": "^11.3.0",
     "axios": "^1.10.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.523.0",
     "pinia": "^3.0.3",
     "radix-vue": "^1.9.5",
-    "tailwind-merge": "^2.5.2",
+    "reka-ui": "^2.3.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.17",
