--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
+    "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^11.3.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
