--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@radix-icons/vue": "^1.0.0",
     "@vueuse/core": "^11.3.0",
     "axios": "^1.10.0",
